<resources>
    <string name="app_name">Calculator</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnplus">+</string>
    <string name="btnminus">-</string>
    <string name="btndiv">/</string>
    <string name="btnmult">X</string>
    <string name="btnsin">sin</string>
    <string name="btncos">cos</string>
    <string name="btneqals">=</string>
    <string name="btndot">.</string>
    <string name="btnsqr">√</string>
    <string name="btnC">C</string>

</resources>
