<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--Made by Exp1d 25.05.19-->
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="209dp" />

    <Button
        android:id="@+id/btn0"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnC" />

    <Button
        android:id="@+id/btn7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn7"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn8"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btndot"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btndot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn0" />

    <Button
        android:id="@+id/btneqals"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:background="#757575"
        android:text="@string/btneqals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btndot" />

    <Button
        android:id="@+id/btn9"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn9"
        app:layout_constraintBottom_toTopOf="@+id/btndot"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <Button
        android:id="@+id/btn4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn4"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn5"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn6"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn5" />

    <Button
        android:id="@+id/btn1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:text="@string/btn1"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#BDBDBD" />

    <Button
        android:id="@+id/btn2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn2"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btn3"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btncos"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:background="#9E9E9E"
        android:text="@string/btncos"
        app:layout_constraintBottom_toTopOf="@+id/btneqals"
        app:layout_constraintStart_toEndOf="@+id/btn9" />

    <Button
        android:id="@+id/btnsin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:background="#9E9E9E"
        android:text="@string/btnsin"
        app:layout_constraintBottom_toTopOf="@+id/btncos"
        app:layout_constraintStart_toEndOf="@+id/btn6" />

    <Button
        android:id="@+id/btnsqrt"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:background="#9E9E9E"
        android:text="@string/btnsqr"
        app:layout_constraintBottom_toTopOf="@+id/btnsin"
        app:layout_constraintStart_toEndOf="@+id/btn3" />

    <Button
        android:id="@+id/btnplus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:text="@string/btnplus"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnminus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:text="@string/btnminus"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintStart_toEndOf="@+id/btnplus" />

    <Button
        android:id="@+id/btndiv"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:text="@string/btndiv"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btnminus" />

    <Button
        android:id="@+id/btnmult"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:text="@string/btnmult"
        app:layout_constraintBottom_toTopOf="@+id/btnsqrt"
        app:layout_constraintStart_toEndOf="@+id/btndiv" />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="251dp"
        android:layout_height="93dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnC"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:background="#BDBDBD"
        android:text="@string/btnC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>